# LearnerID_HTML

./: .replit  app.py  index.html  models.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_app.py
static/css/: ai-theme.css  style.css  styles.css
static/js/: main.js
templates/: 404.html  500.html  about.html  all_reading_history.html  base.html  dashboard.html  how_it_works.html  inbox.html  index.html  learning_credits.html  learning_history.html  learning_journal.html  learning_journal_details.html  learning_paths.html  learning_plan.html  learning_recommendations.html  login.html  my_learning_details.html  profile.html  quiz.html  search_results.html  signup.html  user_loggedin_page.html  weekly_reading_details.html
