[project]
name = "repl-nix-designtohtml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-wtf==1.2.1",
    "flask-sqlalchemy==3.1.1",
    "psycopg2-binary>=2.9.10",
    "email-validator==2.1.0",
    "flask-uploads>=0.2.1",
    "werkzeug==3.0.1",
]
